--- a/index.html
+++ b/index.html
@@ -21,25 +21,24 @@
   <h1 class="text-center py-3 mb-5"></h1>
   <div class="container">
     <div class="row">
-      <div class="col-6 p-0">
-        <div class="web w-100 mb-3 rounded-3">
-          <a target="_blank" href="https://mo3tazbellah.github.io/bookmarker" class="text-decoration-none d-inline-block text-center py-5 w-100">Bookmarker</a>
-        </div>
-        <div class="web w-100 rounded-3">
-          <a target="_blank" href="https://ahmed0s.github.io/portfolio" class="text-decoration-none d-inline-block text-center py-5 w-100">Portfolio</a>
-
+      <div class="col-md-6 p-2">
+        <div class="web first w-100 h-100 rounded-3">
+          <a href="https://mo3tazbellah.github.io/bookmarker" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">bookmarker</a>
         </div>
       </div>
-      <div class="col-6 p-0">
-        <div class="web w-100 ms-3 d-flex justify-content-center align-items-center h-100 rounded-3">
-          <a target="_blank" href="http://digitalcloudsoft.com" class="text-decoration-none d-inline-block text-center py-5 w-100">Digital cloud</a>
-
+      <div class="col-md-6 p-2">
+        <div class="web second w-100 h-100 rounded-3">
+          <a href="https://ahmed0s.github.io/portfolio" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">portfolio</a>
         </div>
       </div>
-      <div class="col-12 p-0">
-        <div class="web w-100 mt-3 p-5 d-flex justify-content-center align-items-center h-100 rounded-3">
-          <a target="_blank" href="https://mo3tazbellah.github.io/weatherApp" class="text-decoration-none d-inline-block text-center py-5 w-100">Weather-app</a>
-
+      <div class="col-md-6 p-2">
+        <div class="web third w-100 h-100 rounded-3">
+          <a href="http://digitalcloudsoft.com" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">digital cloud</a>
+        </div>
+      </div>
+      <div class="col-md-6 p-2">
+        <div class="web fourth w-100 h-100 rounded-3">
+          <a href="https://mo3tazbellah.github.io/weatherApp" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">weather app</a>
         </div>
       </div>
     </div>
