--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moataz Bellah</title>
+  <meta name="theme-color" content="#000000">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -23,22 +24,22 @@
     <div class="row">
       <div class="col-md-6 p-2">
         <div class="web first w-100 h-100 rounded-3">
-          <a href="https://mo3tazbellah.github.io/bookmarker" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">bookmarker</a>
+          <a target="_blank" href="https://mo3tazbellah.github.io/bookmarker" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">bookmarker</a>
         </div>
       </div>
       <div class="col-md-6 p-2">
         <div class="web second w-100 h-100 rounded-3">
-          <a href="https://ahmed0s.github.io/portfolio" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">portfolio</a>
+          <a target="_blank" href="https://ahmed0s.github.io/portfolio" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">portfolio</a>
         </div>
       </div>
       <div class="col-md-6 p-2">
         <div class="web third w-100 h-100 rounded-3">
-          <a href="http://digitalcloudsoft.com" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">digital cloud</a>
+          <a target="_blank" href="http://digitalcloudsoft.com" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">digital cloud</a>
         </div>
       </div>
       <div class="col-md-6 p-2">
         <div class="web fourth w-100 h-100 rounded-3">
-          <a href="https://mo3tazbellah.github.io/weatherApp" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">weather app</a>
+          <a target="_blank" href="https://mo3tazbellah.github.io/weatherApp" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">weather app</a>
         </div>
       </div>
     </div>
