--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moataz Bellah</title>
-  <meta name="theme-color" content="#6961FF">
+  <meta name="theme-color" content="#000">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -43,6 +43,8 @@
         </div>
       </div>
     </div>
+    <h2 class="text-center my-4">Contact</h2>
+    <div class="col-12 d-flex justify-content-center"><a href="mailto:moatazbellah70@gmail.com" class="m-auto mail text-decoration-none"></a></div>
   </div>
 
   <script src="main.js"></script>
