--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="overflow-x-hidden">
   <h1 class="text-center py-3 mb-5"></h1>
   <div class="container">
-    <div class="row">
+    <div class="row pb-5">
       <div class="col-md-6 p-2">
         <div class="web first w-100 h-100 rounded-3">
           <a target="_blank" href="https://mo3tazbellah.github.io/bookmarker" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">bookmarker</a>
@@ -43,10 +43,9 @@
         </div>
       </div>
     </div>
-    <h2 class="text-center my-4">Contact</h2>
-    <div class="col-12 d-flex justify-content-center"><a href="mailto:moatazbellah70@gmail.com" class="m-auto mail text-decoration-none"></a></div>
+    <div class="mail-div bg-danger fixed-bottom d-flex justify-content-center"><a href="mailto:moatazbellah70@gmail.com" class="w-100 text-center py-3 mail text-decoration-none"></a></div>
   </div>
-
+  <audio src="click-sound.wav"></audio>
   <script src="main.js"></script>
 </body>
 
