--- a/index.html
+++ b/index.html
@@ -10,42 +10,33 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-
-
-
 </head>
 
 <body class="overflow-x-hidden">
-  <h1 class="text-center py-3 mb-5"></h1>
+  <h1 class="text-center py-3">projects</h1>
   <div class="container">
-    <div class="row pb-5">
-      <div class="col-md-6 p-2">
-        <div class="web first w-100 h-100 rounded-3">
-          <a target="_blank" href="https://mo3tazbellah.github.io/bookmarker" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">bookmarker</a>
-        </div>
+    <div class="row flex-column">
+      <div class="col-md-3 p-3">
+        <div class="no">01/</div>
+        <a href="https://mo3tazbellah.github.io/bookmarker" target="_blank" class="d-inline-block text-center position-relative ms-5">bookmarker</a>
       </div>
-      <div class="col-md-6 p-2">
-        <div class="web second w-100 h-100 rounded-3">
-          <a target="_blank" href="https://ahmed0s.github.io/portfolio" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">portfolio</a>
-        </div>
+      <div class="col-md-3 p-3">
+        <div class="no">02/</div>
+        <a href="https://ahmed0s.github.io/portfolio" target="_blank" class="d-inline-block text-center position-relative ms-5">AO portfolio</a>
       </div>
-      <div class="col-md-6 p-2">
-        <div class="web third w-100 h-100 rounded-3">
-          <a target="_blank" href="http://digitalcloudsoft.com" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">digital cloud</a>
-        </div>
+      <div class="col-md-3 p-3">
+        <div class="no">03/</div>
+        <a href="http://digitalcloudsoft.com" target="_blank" class="d-inline-block text-center position-relative ms-5">Digital Cloud</a>
       </div>
-      <div class="col-md-6 p-2">
-        <div class="web fourth w-100 h-100 rounded-3">
-          <a target="_blank" href="https://mo3tazbellah.github.io/weatherApp" class="w-100 h-100 d-flex justify-content-center p-5 text-decoration-none">weather app</a>
-        </div>
+      <div class="col-md-3 p-3">
+        <div class="no">04/</div>
+        <a href="https://mo3tazbellah.github.io/weatherApp" target="_blank" class="d-inline-block text-center position-relative ms-5">Weather web app</a>
       </div>
     </div>
-    <div class="mail-div bg-danger fixed-bottom d-flex justify-content-center"><a href="mailto:moatazbellah70@gmail.com" class="w-100 text-center py-3 mail text-decoration-none"></a></div>
   </div>
-  <audio src="click-sound.wav"></audio>
+  
   <script src="main.js"></script>
 </body>
 
