--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <a href="https://mo3tazbellah.github.io/weatherApp" target="_blank" class="d-inline-block text-center position-relative ms-5">Weather web app</a>
       </div>
       <div class="col-md-3 p-3">
-        <div class="no">contact/</div>
-        <a href="mailto:moatazbellah70@gmail.com" target="_blank" class="d-inline-block text-center position-relative ms-5">moatazbellah70@gmail.com</a>
+        <div class="no">05/</div>
+        <a href="mailto:moatazbellah70@gmail.com" target="_blank" class="d-inline-block text-center position-relative ms-5">contact me</a>
       </div>
     </div>
   </div>
